ex4/testdata/typechecker/error/MDeclTest-err1.java
class MDeclTest {
	public static void main(String[] a){
    }
}

class A {
 int x;
    A m(boolean x)
    {    
        boolean x;  // TE
        return new A();
    }

}


